--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,8 @@ target/
 
 # Mypy cache
 .mypy_cache/
+
+# exclusion of irrelevant src python scripts
+/src/data/analyse_data_sql
+/src/features
+/src/models
